--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
     "xpress": "^2.4.6"
   }
