--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   },
   "homepage": "https://github.com/Tarnishing/node2#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
+    "validator": "^13.7.0",
     "xpress": "^2.4.6"
   }
 }
